# reth

./: Cargo.toml  Dockerfile  Makefile  README.md
.github/workflows/: bench.yml  book.yml  deny.yml  docker.yml  eth-sync.yml  integration.yml  lint.yml  stage.yml  unit.yml  windows.yml
book/cli/reth/: node.md
crates/blockchain-tree/: Cargo.toml
crates/blockchain-tree/src/: blockchain_tree.rs  chain.rs
crates/chain-state/src/: test_utils.rs
crates/chainspec/: Cargo.toml
crates/chainspec/src/: api.rs  lib.rs  spec.rs  taiko.rs
crates/cli/commands/src/: node.rs
crates/consensus/auto-seal/src/: lib.rs  task.rs
crates/consensus/beacon/: Cargo.toml
crates/consensus/common/src/: validation.rs
crates/consensus/consensus/src/: lib.rs
crates/engine/invalid-block-hooks/src/: witness.rs
crates/engine/local/: Cargo.toml
crates/engine/local/src/: miner.rs  payload.rs  service.rs
crates/engine/primitives/: Cargo.toml
crates/engine/primitives/src/: lib.rs  message.rs
crates/engine/service/src/: service.rs
crates/engine/tree/: Cargo.toml
crates/engine/tree/src/: engine.rs
crates/engine/util/: Cargo.toml
crates/engine/util/src/: engine_store.rs  lib.rs  reorg.rs  skip_fcu.rs
crates/ethereum-forks/: Cargo.toml
crates/ethereum-forks/src/: hardfork.rs
crates/ethereum/cli/: Cargo.toml
crates/ethereum/cli/src/: chainspec.rs
crates/ethereum/engine-primitives/: Cargo.toml
crates/ethereum/engine-primitives/src/: lib.rs  payload.rs
crates/ethereum/evm/: Cargo.toml
crates/ethereum/evm/src/: execute.rs  lib.rs  taiko.rs
crates/ethereum/node/src/: node.rs
crates/ethereum/payload/: Cargo.toml
crates/ethereum/payload/src/: lib.rs
crates/evm/: Cargo.toml
crates/evm/execution-errors/src/: lib.rs
crates/evm/execution-types/: Cargo.toml
crates/evm/execution-types/src/: execute.rs  execution_outcome.rs  lib.rs  state_diff.rs
crates/evm/src/: execute.rs  lib.rs  metrics.rs  test_utils.rs
crates/gwyneth/: Cargo.toml  TaikoL1.json
crates/gwyneth/src/: builder.rs  engine_api.rs  exex.rs  lib.rs
crates/net/discv5/src/: config.rs
crates/net/network/src/: manager.rs
crates/net/peers/src/: trusted_peer.rs
crates/node-core/src/args/: utils.rs
crates/node-core/src/engine/: engine_store.rs  skip_fcu.rs
crates/node/api/: Cargo.toml
crates/node/api/src/: node.rs
crates/node/builder/: Cargo.toml
crates/node/builder/src/: rpc.rs
crates/node/core/: Cargo.toml
crates/optimism/evm/src/: execute.rs
crates/optimism/payload/src/: payload.rs
crates/payload/basic/: Cargo.toml
crates/payload/primitives/: Cargo.toml
crates/payload/primitives/src/: error.rs  lib.rs  payload.rs  traits.rs
crates/payload/validator/: Cargo.toml
crates/payload/validator/src/: lib.rs
crates/primitives/: Cargo.toml
crates/primitives-traits/src/constants/: mod.rs
crates/primitives-traits/src/header/: sealed.rs
crates/primitives/src/: alloy_compat.rs  block.rs  lib.rs
crates/primitives/src/revm/: config.rs
crates/primitives/src/transaction/: compat.rs  mod.rs  util.rs
crates/revm/: Cargo.toml
crates/revm/src/: database.rs
crates/rpc/rpc/: Cargo.toml
crates/rpc/rpc-api/: Cargo.toml
crates/rpc/rpc-api/src/: debug.rs  engine.rs
crates/rpc/rpc-builder/: Cargo.toml
crates/rpc/rpc-builder/src/: config.rs  lib.rs
crates/rpc/rpc-engine-api/: Cargo.toml
crates/rpc/rpc-engine-api/src/: engine_api.rs
crates/rpc/rpc-eth-api/: Cargo.toml
crates/rpc/rpc-eth-api/src/: node.rs
crates/rpc/rpc-eth-types/: Cargo.toml
crates/rpc/rpc-layer/src/: jwt_validator.rs
crates/rpc/rpc-server-types/: Cargo.toml
crates/rpc/rpc-types-compat/: Cargo.toml
crates/rpc/rpc/src/: debug.rs  (+2 more)
crates/storage/db/: Cargo.toml
crates/storage/db-api/: Cargo.toml
crates/storage/provider/: Cargo.toml
crates/storage/storage-api/: Cargo.toml
crates/taiko/chainspec/: Cargo.toml
crates/taiko/chainspec/res/genesis/: internal_l2a.json
crates/taiko/chainspec/src/: lib.rs  spec.rs  taiko.rs
crates/taiko/chainspecbak/: Cargo.toml
crates/taiko/cli/: Cargo.toml
crates/taiko/cli/src/: chainspec.rs
crates/taiko/consensus/: Cargo.toml
crates/taiko/consensus/consensus/: Cargo.toml
crates/taiko/consensus/consensus/src/: anchor.rs  lib.rs  validation.rs  validator.rs
crates/taiko/consensus/proposer/: Cargo.toml
crates/taiko/consensus/proposer/src/: client.rs  lib.rs  task.rs
crates/taiko/consensus/src/: anchor.rs  lib.rs
crates/taiko/engine-primitives/: Cargo.toml
crates/taiko/engine-primitives/src/: lib.rs  payload.rs
crates/taiko/engine/primitives/: Cargo.toml
crates/taiko/engine/primitives/src/: lib.rs  payload.rs
crates/taiko/engine/types/: Cargo.toml
crates/taiko/engine/types/src/: lib.rs  payload.rs
crates/taiko/evm/: Cargo.toml
crates/taiko/evm/src/: config.rs  eip6110.rs  execute.rs  lib.rs
crates/taiko/evmbakl/: Cargo.toml
crates/taiko/hardforks/: Cargo.toml
crates/taiko/hardforks/src/: hardfork.rs  lib.rs
crates/taiko/node/: Cargo.toml
crates/taiko/node/src/: engine.rs  evm.rs  lib.rs  node.rs
crates/taiko/payload/builder/: Cargo.toml
crates/taiko/payload/builder/src/: builder.rs  error.rs  lib.rs
crates/taiko/payload/validator/: Cargo.toml
crates/taiko/payload/validator/src/: lib.rs
crates/taiko/primitives/: Cargo.toml
crates/taiko/primitives/src/: l1_origin.rs  lib.rs
crates/taiko/rpc/: Cargo.toml
crates/taiko/rpc/src/: api.rs  lib.rs  taiko.rs
crates/taiko/rpc/src/implementation/: client.rs  mod.rs  preflight.rs  proposer.rs  task.rs
crates/taiko/storage/: Cargo.toml
crates/taiko/storage/src/: l1_origin.rs  lib.rs
crates/tracing/: Cargo.toml
crates/transaction-pool/: Cargo.toml
ecosystem/examples/uniswapV2/: README.md
etc/assertoor/: assertoor-template.yaml
examples/custom-beacon-withdrawals/src/: main.rs
examples/custom-engine-types/: Cargo.toml
examples/custom-engine-types/src/: main.rs
examples/custom-evm/: Cargo.toml
examples/custom-evm/src/: main.rs
examples/rpc-db/src/: main.rs
examples/stateful-precompile/: Cargo.toml
examples/stateful-precompile/src/: main.rs
(+51 files in other folders)
