[package]
name = "reth-chainspec"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
# reth
reth-ethereum-forks.workspace = true
reth-network-peers.workspace = true
reth-trie-common.workspace = true
reth-primitives-traits.workspace = true
revm-primitives = { workspace = true, optional = true, features = ["serde"] }

# op-reth
reth-optimism-forks = { workspace = true, optional = true }

# taiko
taiko-reth-forks.workspace = true

# ethereum
alloy-chains = { workspace = true, features = ["serde", "rlp"] }
alloy-eips = { workspace = true, features = ["serde"] }
alloy-genesis.workspace = true
alloy-primitives = { workspace = true, features = ["rand", "rlp"] }
alloy-trie.workspace = true
alloy-serde = { workspace = true, optional = true }

# misc
auto_impl.workspace = true
once_cell.workspace = true
serde_json.workspace = true
derive_more.workspace = true
strum = { workspace = true, optional = true }
num_enum = { version = "0.7.2", optional = true }
serde = { workspace = true, features = ["derive"], optional = true }

[dev-dependencies]
# eth
alloy-trie = { workspace = true, features = ["arbitrary"] }
alloy-eips = { workspace = true, features = ["arbitrary"] }
alloy-rlp = { workspace = true, features = ["arrayvec"] }
alloy-genesis.workspace = true

[features]
taiko = [
    "dep:strum",
    "dep:num_enum",
    "dep:alloy-serde",
    "reth-ethereum-forks/taiko",
    "serde",
]
serde = ["dep:serde"]
default = ["std"]
optimism = ["reth-optimism-forks"]
std = [
    "alloy-chains/std",
    "alloy-eips/std",
    "alloy-genesis/std",
    "alloy-primitives/std",
    "alloy-trie/std",
]
arbitrary = ["alloy-chains/arbitrary"]
test-utils = []
