[package]
name = "reth-ethereum-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# reth
reth-cli.workspace = true
reth-chainspec.workspace = true

# taiko
taiko-reth-chainspec = { workspace = true, optional = true }

# misc
eyre.workspace = true

[dev-dependencies]
clap.workspace = true

[features]
taiko = [
    "dep:taiko-reth-chainspec",
]