[package]
name = "reth-taiko-chainspec"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "EVM chain spec implementation for taiko."

[lints]
workspace = true

[dependencies]
# reth
reth-chainspec.workspace = true
reth-ethereum-forks.workspace = true
reth-network-peers.workspace = true

# taiko-reth
reth-taiko-forks.workspace = true

# ethereum
alloy-chains.workspace = true
alloy-genesis.workspace = true
alloy-primitives.workspace = true
alloy-consensus.workspace = true
alloy-serde.workspace = true

# io
serde.workspace = true
serde_json.workspace = true

# misc
derive_more.workspace = true

[features]
default = ["std"]
std = [
    "alloy-chains/std",
    "alloy-genesis/std",
    "alloy-primitives/std",
    "reth-chainspec/std",
    "reth-ethereum-forks/std",
    "reth-taiko-forks/std",
    "alloy-consensus/std",
    "derive_more/std",
    "reth-network-peers/std",
]
