[package]
name = "reth-taiko-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# reth
reth-cli.workspace = true
reth-taiko-chainspec.workspace = true
reth-taiko-forks.workspace = true

# misc
eyre.workspace = true
