[package]
name = "reth-taiko-consensus"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# reth
reth-consensus-common.workspace = true
reth-primitives = { workspace = true, features = ["taiko"] }
reth-consensus.workspace = true
reth-chainspec.workspace = true
reth-primitives-traits.workspace = true
reth-ethereum-consensus.workspace = true
reth-provider.workspace = true

# Alloy
alloy-sol-types.workspace = true
alloy-primitives.workspace = true
alloy-consensus.workspace = true

# Ethereum
revm-primitives = { workspace = true, features = ["taiko"] }

# Misc
once_cell.workspace = true
eyre.workspace = true
