[package]
name = "taiko-reth-engine-primitives"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
alloy-eips.workspace = true
alloy-primitives.workspace = true
alloy-rpc-types.workspace = true
alloy-rpc-types-engine.workspace = true

# reth
reth-payload-primitives.workspace = true
reth-rpc-types-compat.workspace = true
reth-primitives.workspace = true
reth-ethereum-engine-primitives.workspace = true
reth-engine-primitives.workspace = true
reth-chainspec.workspace = true

# taiko
taiko-reth-primitives.workspace = true
serde.workspace = true
alloy-rlp.workspace = true
alloy-serde.workspace = true

serde_with = { version = "1.11", features = ["base64"] }
sha2 = "0.10.8"

[lints]
workspace = true
