[package]
name = "taiko-reth-engine-primitives"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
# reth
reth-primitives.workspace = true
reth-engine-primitives.workspace = true
reth-payload-primitives.workspace = true
#reth-rpc-types.workspace = true
reth-rpc-types-compat.workspace = true

# taiko
taiko-reth-primitives.workspace = true
reth-ethereum-engine-primitives.workspace = true
alloy-rpc-types-engine.workspace = true

# alloy
alloy-serde.workspace = true
alloy-rlp.workspace = true

# misc
serde.workspace = true
serde_with = { workspace = true, features = ["base64"] }
sha2.workspace = true
alloy-eips.workspace = true

[lints]
workspace = true

[features]
