[package]
name = "reth-taiko-evm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# Reth
reth-chainspec.workspace = true
reth-ethereum-forks.workspace = true
reth-evm = { workspace = true, features = ["taiko"] }
reth-primitives.workspace = true
reth-primitives-traits.workspace = true
reth-revm.workspace = true
reth-execution-errors.workspace = true
reth-execution-types.workspace = true
reth-prune-types.workspace = true
reth-consensus.workspace = true
reth-consensus-common.workspace = true
reth-evm-ethereum.workspace = true
reth-ethereum-consensus.workspace = true

# ethereum
alloy-eips.workspace = true
alloy-primitives.workspace = true
op-alloy-consensus.workspace = true
alloy-consensus.workspace = true

# Optimism
reth-taiko-consensus.workspace = true
reth-taiko-chainspec.workspace = true
reth-taiko-forks.workspace = true
reth-taiko-primitives.workspace = true

# revm
revm = { workspace = true, features = ["taiko"] }
revm-primitives = { workspace = true, features = ["taiko"] }

# misc
derive_more.workspace = true
tracing.workspace = true

[dev-dependencies]
reth-evm = { workspace = true, features = ["test-utils"] }
reth-revm = { workspace = true, features = ["test-utils"] }
reth-primitives = { workspace = true, features = ["test-utils"] }
reth-optimism-chainspec.workspace = true
alloy-genesis.workspace = true
alloy-consensus.workspace = true
reth-optimism-primitives = { workspace = true, features = ["arbitrary"] }

[features]
default = ["std"]
std = [
    "reth-consensus/std",
    "reth-primitives/std",
    "reth-revm/std",
    "alloy-consensus/std",
    "alloy-eips/std",
    "alloy-genesis/std",
    "alloy-primitives/std",
    "revm-primitives/std",
    "reth-primitives-traits/std",
    "revm/std",
    "reth-ethereum-forks/std",
    "derive_more/std",
    "reth-taiko-forks/std",
]
