[package]
name = "taiko-reth-evm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
# reth
reth-chainspec = { workspace = true, features = ["taiko"] }
reth-ethereum-forks.workspace = true
reth-evm = { workspace = true, features = ["taiko"] }
reth-evm-ethereum.workspace = true
reth-execution-types.workspace = true
reth-primitives = { workspace = true, features = ["taiko"] }
reth-prune-types.workspace = true
reth-revm.workspace = true
reth-rpc-types-compat.workspace = true
reth-rpc.workspace = true

# revm
revm-primitives.workspace = true

# taiko
taiko-reth-beacon-consensus.workspace = true
taiko-reth-forks.workspace = true

# alloy
alloy-primitives.workspace = true
reth-consensus.workspace = true
alloy-eips.workspace = true
alloy-sol-types.workspace = true

# misc
serde_json.workspace = true
tracing.workspace = true
flate2 = "1.0.35"
alloy-rpc-types.workspace = true

[features]
default = ["std"]
std = []

[lints]
workspace = true
