[package]
name = "taiko-reth-node"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
reth-chainspec = { workspace = true, features = ["taiko"] }
reth-primitives = { workspace = true, features = ["taiko"] }
reth-payload-builder.workspace = true
reth-auto-seal-consensus.workspace = true
reth-basic-payload-builder = { workspace = true, features = ["taiko"] }
reth-consensus.workspace = true
reth-node-api.workspace = true
reth-node-builder.workspace = true
reth-tracing.workspace = true
reth-provider.workspace = true
reth-transaction-pool.workspace = true
reth-network.workspace = true
reth-evm.workspace = true
reth-rpc.workspace = true
reth-ethereum-payload-builder = { workspace = true, features = ["taiko"] }

# ethereum
alloy-rpc-types-engine.workspace = true

# taiko
taiko-reth-beacon-consensus.workspace = true
taiko-reth-evm.workspace = true
taiko-reth-engine-primitives.workspace = true
taiko-reth-payload-builder.workspace = true

# async
tracing.workspace = true

# misc
serde.workspace = true
eyre.workspace = true
futures-util.workspace = true

[features]
default = ["reth-evm/taiko"]

[lints]
workspace = true
