[package]
name = "taiko-reth-primitives"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Taiko primitive types"

[dependencies]
# reth
reth-db-api.workspace = true
alloy-primitives.workspace = true
serde.workspace = true
alloy-rlp.workspace = true

[lints]
workspace = true
