[package]
name = "taiko-reth-primitives"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
# reth
reth-primitives.workspace = true

# alloy
alloy-rlp.workspace = true

# Misc
serde.workspace = true

[lints]
workspace = true
