[package]
name = "reth-taiko-rpc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Ethereum RPC implementation for taiko."

[lints]
workspace = true

[dependencies]
# reth
reth-evm.workspace = true
reth-primitives.workspace = true
reth-provider.workspace = true
reth-rpc-eth-api.workspace = true
reth-rpc-eth-types.workspace = true
reth-rpc-server-types.workspace = true
reth-tasks = { workspace = true, features = ["rayon"] }
reth-transaction-pool.workspace = true
reth-rpc.workspace = true
reth-rpc-api.workspace = true
reth-node-api.workspace = true
reth-network-api.workspace = true
reth-node-builder.workspace = true
reth-chainspec.workspace = true

# op-reth
reth-taiko-chainspec.workspace = true
reth-taiko-beacon-consensus.workspace = true
reth-taiko-evm.workspace = true
reth-taiko-payload-builder.workspace = true
reth-taiko-primitives.workspace = true
reth-taiko-forks.workspace = true

# ethereum
alloy-eips.workspace = true
alloy-primitives.workspace = true
alloy-rpc-types-eth.workspace = true
alloy-rpc-types-debug.workspace = true
alloy-consensus.workspace = true
op-alloy-network.workspace = true
op-alloy-rpc-types.workspace = true
op-alloy-rpc-types-engine.workspace = true
op-alloy-rpc-jsonrpsee.workspace = true
op-alloy-consensus.workspace = true
revm.workspace = true

# async
parking_lot.workspace = true
tokio.workspace = true
reqwest = { workspace = true, features = ["rustls-tls-native-roots"] }

# rpc
jsonrpsee-core.workspace = true
jsonrpsee-types.workspace = true
serde_json.workspace = true

# misc
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
reth-taiko-chainspec.workspace = true

[features]