[package]
name = "reth-taiko-rpc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Ethereum RPC implementation for taiko."

[lints]
workspace = true

[dependencies]
# reth
reth-evm.workspace = true
reth-primitives = { workspace = true, features = ["taiko"] }
reth-provider.workspace = true
reth-rpc-eth-api.workspace = true
reth-rpc-eth-types.workspace = true
reth-rpc-server-types.workspace = true
reth-tasks = { workspace = true, features = ["rayon"] }
reth-transaction-pool.workspace = true
reth-node-api.workspace = true
reth-chainspec.workspace = true
reth-errors.workspace = true
reth-rpc-types-compat.workspace = true
reth-revm = { workspace = true, features = ["taiko"] }

# taiko
reth-taiko-primitives.workspace = true
reth-taiko-evm.workspace = true

# ethereum
alloy-eips.workspace = true
alloy-primitives.workspace = true
alloy-rpc-types-eth.workspace = true
alloy-consensus.workspace = true
alloy-network.workspace = true
revm.workspace = true

# async
tokio.workspace = true
async-trait.workspace = true

# misc
jsonrpsee = { workspace = true, features = ["server", "macros"] }
serde = { workspace = true, features = ["derive"] }
tracing.workspace = true
futures.workspace = true

[dev-dependencies]
reth-taiko-chainspec.workspace = true

[features]
client = [
    "jsonrpsee/client",
    "jsonrpsee/async-client",
    "reth-rpc-eth-api/client",
]
