[package]
name = "taiko-reth-provider"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
# taiko
taiko-reth-primitives.workspace = true

[lints]
workspace = true
