[package]
name = "taiko-reth-provider"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
# taiko
taiko-reth-primitives.workspace = true

# misc
auto_impl.workspace = true
alloy-primitives = "0.8.15"
reth-storage-errors.workspace = true
reth-provider.workspace = true
reth-db-api.workspace = true
reth-node-types.workspace = true

[lints]
workspace = true
