[package]
name = "taiko-reth-beacon-consensus"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
# reth
reth-chainspec = { workspace = true, features = ["taiko"] }
reth-primitives = { workspace = true, features = ["taiko"] }
reth-consensus.workspace = true
reth-consensus-common.workspace = true

# alloy
alloy-primitives.workspace = true

# misc
tracing.workspace = true
once_cell.workspace = true
anyhow = "1.0.94"
alloy-sol-types.workspace = true

[lints]
workspace = true
