[package]
name = "reth-taiko-engine-primitives"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# reth
reth-rpc-types-compat.workspace = true
reth-payload-primitives.workspace = true
reth-primitives.workspace = true
reth-chain-state.workspace = true
alloy-rpc-types-engine.workspace = true
alloy-primitives.workspace = true
alloy-eips.workspace = true

# taiko
reth-taiko-primitives.workspace = true

# ethereum
reth-ethereum-engine-primitives.workspace = true

# misc
serde.workspace = true
serde_with.workspace = true
alloy-serde = "0.1.3"
alloy-rlp.workspace = true
sha2.workspace = true

[dev-dependencies]
serde_json.workspace = true
