[package]
name = "reth-taiko-engine-types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# reth
alloy-rpc-types-engine = { workspace = true, features = ["serde"] }
alloy-primitives = { workspace = true, features = ["serde"] }
alloy-eips.workspace = true

# taiko
reth-taiko-primitives.workspace = true

# misc
serde.workspace = true
serde_with.workspace = true
alloy-serde = "0.1.3"
alloy-rlp.workspace = true
secp256k1 = { workspace = true, features = ["serde"] }

[dev-dependencies]
serde_json.workspace = true
