[package]
name = "taiko-reth-payload-builder"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
# reth
reth-chainspec = { workspace = true, features = ["taiko"] }
reth-basic-payload-builder.workspace = true

# taiko
taiko-reth-evm.workspace = true
reth-payload-primitives.workspace = true
taiko-reth-engine-primitives.workspace = true
reth-transaction-pool.workspace = true
reth-evm.workspace = true
reth-provider.workspace = true
taiko-reth-provider.workspace = true

[lints]
workspace = true
