[package]
name = "reth-taiko-payload-builder"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "A basic ethereum payload builder for reth that uses the txpool API to build payloads."

[lints]
workspace = true

[dependencies]
# reth
reth-primitives = { workspace = true }
reth-revm = { workspace = true }
reth-transaction-pool.workspace = true
reth-provider.workspace = true
reth-payload-builder.workspace = true
reth-basic-payload-builder.workspace = true
reth-evm = { workspace = true }
reth-errors.workspace = true
reth-chainspec = { workspace = true }

# taiko
reth-taiko-evm.workspace = true
reth-taiko-engine-primitives.workspace = true
reth-taiko-primitives.workspace = true
reth-taiko-provider.workspace = true
reth-taiko-consensus.workspace = true

# crypto
alloy-rlp.workspace = true
alloy-primitives.workspace = true

# misc
tracing.workspace = true
thiserror.workspace = true
