[package]
name = "taiko-reth-payload-validator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
# reth
reth-chainspec.workspace = true
reth-primitives.workspace = true
reth-rpc-types-compat.workspace = true

# alloy
alloy-rpc-types.workspace = true
alloy-rpc-types-engine.workspace = true

# taiko
taiko-reth-engine-primitives.workspace = true

[lints]
workspace = true
